# empire-infrastructure

./: .gitignore  CLAUDE.md  daily_analytics_sync.py  empire.code-workspace  gsc_top_pages_audit.py  setup-services-autostart.ps1  start-bmc-webhook.ps1  start-empire-dashboard.ps1  start-grimoire-api.ps1  start-screenpipe.ps1  start-videoforge.ps1  start-vision-service.ps1
.claude/: settings.json  (+1 more)
openclaw-agent/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  SKILL.md  cli.py  docker-compose.yml  pyproject.toml  requirements.txt
openclaw-agent/api/: __init__.py  app.py
openclaw-agent/openclaw/: __init__.py  models.py  openclaw_engine.py
openclaw-agent/tests/: test_alert_router.py  test_amplify_pipeline.py  test_analytics.py  test_api.py  test_browser_manager.py  test_browsing_warmup.py  test_captcha_handler.py  test_cli.py  test_credential_store.py  test_cron_scheduler.py  test_email_verifier.py  test_executor_agent.py  test_health_checks.py  test_heartbeat_config.py  test_heartbeat_daemon.py  test_identity_fleet.py  test_knowledge.py  test_market_oracle.py  test_model_router.py  test_models.py  test_monitor_agent.py  test_openclaw_engine.py  test_planner_agent.py  test_platform_codex.py  test_platform_scout.py  test_proactive_agent.py  test_profile_sentinel.py  test_profile_smith.py  test_profile_sync.py  test_proxy_manager.py  test_rate_limiter.py  test_retry_engine.py  test_revenue_tracker.py  test_scheduler.py  test_self_healer.py  test_session_manager.py  test_stealth.py  test_step_router.py  test_telegram_bot.py  test_variation_engine.py  (+3 more)
(+1357 files in other folders)
